Complete initial project structure

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    
+    <header></header>
+    <main></main><div>
+    <footer></footer>
   </body>
 </html>
