Complete initial logic and design

--- a/src/template.html
+++ b/src/template.html
@@ -6,8 +6,16 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
-    <main></main><div>
-    <footer></footer>
+    <header>
+      <input placeholder="Type location here" id="locationInput" type="text" />
+      <button id="buttonSearch">Search</button>
+    </header>
+    <main>
+      <div class="address"></div>
+      <div class="current-conditions"></div>
+      <div class="weather-summary"></div>
+      <div class="today-future-data"></div>
+    </main>
+    <footer>By Michael Bagaskoro Edwards</footer>
   </body>
 </html>
