Finish final logic, fahrenheit change

--- a/src/template.html
+++ b/src/template.html
@@ -7,21 +7,31 @@
   </head>
   <body>
     <header>
-      <input placeholder="Type location here" id="locationInput" type="text" />
-      <button id="buttonSearch">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24px"
-          height="24px"
-          fill="currentColor"
-          class="bi bi-search"
-          viewBox="0 0 16 16"
-        >
-          <path
-            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"
-          />
-        </svg>
-      </button>
+      <div>
+        <input
+          placeholder="Type location here"
+          id="locationInput"
+          type="text"
+        />
+        <button id="buttonSearch">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24px"
+            height="24px"
+            fill="currentColor"
+            class="bi bi-search"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"
+            />
+          </svg>
+        </button>
+      </div>
+      <select name="unit" id="unit">
+        <option value="celsius">°C</option>
+        <option value="fahrenheit">°F</option>
+      </select>
     </header>
     <main>
       <div class="address"></div>
